# ODRA

./: .env.example  .gitignore  .pylintrc  BUGFIXES.md  CHANGES_OVERVIEW.txt  CHECK_SYSTEM.sh  FIXES_QUICK_START.md  FIXES_SUMMARY.txt  IMPORT_FIX.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_SYSTEM.sh  SYSTEM_STATUS.md  TESTING_GUIDE.md  docker-compose.yml  init_db.py  package-lock.json  pyrightconfig.json  run_tests.sh  setup.cfg  test_all_components.py  test_integration.py  test_worker_local.py  verify_fixes.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py  security.py
backend/app/api/: audit.py  health.py  ingest.py
backend/app/services/: auditor.py  embeddings.py  ingest.py  task_queue.py
backend/tests/: test_api.py  test_auditor.py  test_e2e.py  test_embeddings.py  test_ingest.py  test_worker_integration.py
clickhouse/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Admin.tsx  Home.tsx  Job.tsx  Report.tsx
scripts/: generate_sample_data.py
workers/: Dockerfile  __init__.py  processor.py  requirements.txt
