[metadata]
name = odra
version = 0.2.0
description = ODRA - Audit and Risk Management System

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi==0.109.0
    uvicorn[standard]==0.27.0
    pydantic==2.5.0
    sqlalchemy==2.0.25
    redis==5.0.1
    tenacity==8.2.3
    sentence-transformers==2.2.2

[tool:pytest]
testpaths = backend/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[pylint]
init-hook=import sys; sys.path.insert(0, 'backend'); sys.path.insert(0, 'workers')
disable=missing-module-docstring,missing-function-docstring
